--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('./assets/fonts/Ubuntu-Bold.ttf');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('./assets/fonts/Ubuntu-Medium.ttf');
+	font-weight: bolder;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('./assets/fonts/Ubuntu-Regular.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
+
+input:focus,
+button:focus {
+	outline: none;
+}
+
+body {
+	font-family: 'Ubuntu';
+}
