--- a/src/index.css
+++ b/src/index.css
@@ -32,41 +32,21 @@ body {
 	font-family: 'Ubuntu';
 }
 
-.skeleton {
-	animation: skeleton 4s ease infinite alternate;
+.loader {
+	animation-duration: 2.2s;
+	animation-fill-mode: forwards;
+	animation-iteration-count: infinite;
+	animation-name: shimmer;
+	animation-timing-function: linear;
+	background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
+	background-size: 1200px 100%;
 }
 
-@keyframes skeleton {
-	10% {
-		opacity: 0.6;
-	}
-
-	20% {
-		opacity: 0.8;
-	}
-
-	30% {
-		opacity: 1;
-	}
-	40% {
-		opacity: 0.6;
-	}
-	50% {
-		opacity: 0.8;
-	}
-	60% {
-		opacity: 1;
-	}
-	70% {
-		opacity: 0.6;
-	}
-	80% {
-		opacity: 8;
-	}
-	90% {
-		opacity: 1;
+@keyframes shimmer {
+	0% {
+		background-position: -1200px 0;
 	}
 	100% {
-		opacity: 1;
+		background-position: 1200px 0;
 	}
 }
